fix alignment of bootstrap dropdown menu ul

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -369,6 +369,6 @@ body{
   }
 
   .required-dropdown ul {
-    border: 3px solid aqua;
-    display: block;
+    position: relative;
+    float: right;
   }
